# tessellation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: app.h  common.h  memory.h  util.h
include/core/: assert.h  log.h  window.h
include/graphics/: shader.h
src/: app.c  main.c  memory.c  util.c
src/core/: assert.c  log.c
src/graphics/: shader.c
